--- a/mainStyle.css
+++ b/mainStyle.css
@@ -14,7 +14,6 @@ main {
 
 .menu {
     list-style: none;
-    margin-top: 5px;
     padding: 10px;
     display: flex;
     justify-content: center;
@@ -22,30 +21,30 @@ main {
     text-align: center;
 }
 
-.menu .lista li {
+.menu .opcoes {
     display: inline-block;
     margin-top: 20px;
 
 }
 
-.menu ul li a {
+.menu .opcoes .link {
     font-size: 25px;
     text-decoration: none;
     color: rgb(37, 38, 9);
     flex-basis: 2;
     margin-right: 50px;
-
 }
 
-.menu ul li a:hover {
+.menu .opcoes .link:hover {
     background-color: rgb(9, 20, 38);
+    border: 5px #DDBB64 solid;
     color: white;
     padding: 15px
 }
 
 .descricao {
     background-color:rgb(9, 20, 38);
-    height: 600px;    
+    height: 750px;    
 }
 .descricao img{
     margin-left: 12%;
