--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,4 +1,4 @@
-html {
+body {
     background-color: rgb(9, 20, 38);
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -23,8 +23,6 @@ main {
 
 .menu .opcoes {
     display: inline-block;
-    margin-top: 20px;
-
 }
 
 .menu .opcoes .link {
@@ -39,19 +37,19 @@ main {
     background-color: rgb(9, 20, 38);
     border: 5px #DDBB64 solid;
     color: white;
-    padding: 15px
+    padding: 10px
 }
 
 .descricao {
     background-color:rgb(9, 20, 38);
     height: 750px;    
 }
-.descricao img{
+.descricao .servicos{
     margin-left: 12%;
     margin-top: 2%;
 }
 
-.descricao .text {
+.descricao .texto {
     float: right;
     line-height: 40px;
     padding: 70px;
